--- a/src/app/cocina-ya/components/user-page/user-page.component.html
+++ b/src/app/cocina-ya/components/user-page/user-page.component.html
@@ -1,35 +1,30 @@
-
-
-<div class="container " *ngIf="user">
-    <h3 class="mb-3 text-center">Detalles del Usuario</h3>
-    <div class="p-4 rounded bg-light">
-      <div class="row mb-3">
-        <div class="col-lg-6">
-          <label for="firstName" class="form-label">First Name</label>
-          <div id="firstName" class="form-control bg-white">{{ user.name }}</div>
-        </div>
-        <div class="col-lg-6">
-          <label for="lastName" class="form-label">Last Name</label>
-          <div id="lastName" class="form-control bg-white">{{ user.lastName }}</div>
-        </div>
+<div class="container my-5" *ngIf="user">
+  <h3 class="mb-4 text-center text-primary">User Details</h3>
+  <div class="p-4 rounded shadow-sm bg-light">
+    <!-- User Details -->
+    <div class="row mb-4">
+      <div class="col-lg-6 mb-3 mb-lg-0">
+        <label for="firstName" class="form-label fw-bold">First Name</label>
+        <div id="firstName" class="form-control bg-white border-0">{{ user.name }}</div>
       </div>
-  
-      <div class="row mb-3">
-        <div class="col-lg-6">
-          <label for="email" class="form-label">Email</label>
-          <div id="email" class="form-control bg-white">{{ user.email }}</div>
-        </div>
-        <div class="col-lg-6">
-          <label for="password" class="form-label">Password</label>
-          <div id="password" class="form-control bg-white">{{ user.password }}</div>
-        </div>
-      </div>
-      <hr class="mb-4">
-  
-      <div class="text-center">
-        <button class="btn btn-primary mt-3" [routerLink]="['/edit-user', user.id]">
-          Editar
-        </button>
+      <div class="col-lg-6">
+        <label for="lastName" class="form-label fw-bold">Last Name</label>
+        <div id="lastName" class="form-control bg-white border-0">{{ user.lastName }}</div>
       </div>
     </div>
+    <div class="row mb-4">
+      <div class="col-lg-12">
+        <label for="email" class="form-label fw-bold">Email</label>
+        <div id="email" class="form-control bg-white border-0">{{ user.email }}</div>
+      </div>
+    </div>
+    <!-- Divider -->
+    <hr class="mb-4">
+    <!-- Edit Button -->
+    <div class="text-center">
+      <button class="btn btn-primary btn-lg px-4" [routerLink]="['/edit-user', user.id]">
+        Edit
+      </button>
+    </div>
   </div>
+</div>
