--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-navigation-bar></app-navigation-bar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="app-container d-flex flex-column min-vh-100">
+    <app-navigation-bar></app-navigation-bar>
+    <div class="flex-grow-1">
+      <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+  </div>
+  
