--- a/src/app/cocina-ya/components/ingredient-filtering/ingredient-filtering.component.html
+++ b/src/app/cocina-ya/components/ingredient-filtering/ingredient-filtering.component.html
@@ -1,11 +1,8 @@
 <div class="row justify-content-center text-center">
-    <label *ngFor="let ingredient of ingredientList | slice:0:20" 
-           class="btn btn-outline-primary m-2 d-flex align-items-center col-lg-1">
-      <input type="checkbox" 
-             name="{{ingredient.strIngredient}}Checkbox" 
-             [(ngModel)]="ingredient.selected" 
-             (change)="onIngredientChange()" 
-             class="me-2">
-      {{ ingredient.strIngredient }}
-    </label>
+       <label *ngFor="let ingredient of ingredientList | slice:0:20"
+              class="btn btn-outline-primary m-2 d-flex align-items-center col-6 col-md-3 col-lg-2">
+              <input type="checkbox" name="{{ingredient.strIngredient}}Checkbox" [(ngModel)]="ingredient.selected"
+                     (change)="onIngredientChange()" class="me-2">
+              {{ ingredient.strIngredient }}
+       </label>
 </div>
