--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -30,7 +30,14 @@
                     <h2 style="text-align:center;margin: 10px 0 10px 0;">Instructions</h2>
                     <p style="text-align: justify;">{{recipe.strInstructions}}</p>
                 </div>
+                <div class="comments-section">
+                    <h3 class="text-center">Comments</h3>
+                    <div *ngFor="let comment of comments" class="comment-card">
+                      <app-comment-card [comment]="comment" ></app-comment-card>
+                    </div>
+                  </div>
             </div>
+            
             <div class="modal-footer">
                 <button class="btn btn-secondary" (click)="previousRecipe()" [disabled]="index === 0">Previous</button>
                 <button class="btn btn-secondary" (click)="nextRecipe()"
