Actualizacion de comentarios

--- a/src/app/cocina-ya/components/comment-card/comment-card.component.html
+++ b/src/app/cocina-ya/components/comment-card/comment-card.component.html
@@ -1,4 +1,4 @@
-<div class="card my-3">
+<div *ngIf="user" class="card my-3">
   <div class="card-body">
     <p class="card-text">{{ comment.text }}</p>
     <footer class="blockquote-footer">
