--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -48,6 +48,9 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark" routerLink="recipes" routerLinkActive="active">Recipes</a>
+        </li>
       </ul>
 
       <!-- Search Bar (Desktop) -->
