--- a/src/app/cocina-ya/components/home-page/home-page.component.html
+++ b/src/app/cocina-ya/components/home-page/home-page.component.html
@@ -1,2 +1,2 @@
-<app-ingredient-filtering></app-ingredient-filtering>
+<h2 class="text-center pt-3">Recipes</h2>
 <app-list-recipes></app-list-recipes>
