--- a/src/app/cocina-ya/components/user-page/user-page.component.html
+++ b/src/app/cocina-ya/components/user-page/user-page.component.html
@@ -25,7 +25,7 @@
       <button class="btn btn-primary btn-lg px-4" [routerLink]="['/edit-user', user.id]">
         Edit
       </button>      
-      <button class="btn btn-danger ms-auto" (click)="logout()">Log out</button>
+      <button class="btn btn-danger ms-auto btn-lg" (click)="logout()">Log out</button>
     </div>
     
 
