--- a/src/app/cocina-ya/components/category-page/category-page.component.html
+++ b/src/app/cocina-ya/components/category-page/category-page.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">{{category}}</h2>
+<h2 class="text-center pt-3">{{category}}</h2>
 <app-ingredient-filtering></app-ingredient-filtering>
 <app-list-recipes></app-list-recipes>
 
