--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -49,7 +49,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" routerLink="recipes" routerLinkActive="active">Recipes</a>
+          <a class="nav-link text-dark" routerLink="recipes" routerLinkActive="active">All Recipes</a>
         </li>
       </ul>
 
