--- a/src/app/cocina-ya/components/comment-form/comment-form.component.html
+++ b/src/app/cocina-ya/components/comment-form/comment-form.component.html
@@ -11,9 +11,21 @@
             placeholder="Write your comment..." 
             required>
         </div>
+
+        <div class="form-group mt-2">
+          <input 
+            type="file" 
+            class="form-control" 
+            (change)="onFileSelected($event)" 
+            accept="image/*"
+            #fileInput>
+        </div>
+        
         <button 
           type="submit" 
           class="btn btn-primary mt-2" 
+          id="fileInput"
+          (click)="fileInput.value = ''"
           [disabled]="!commentForm.form.valid">
           Send
         </button>
