--- a/src/app/cocina-ya/components/comment-card/comment-card.component.html
+++ b/src/app/cocina-ya/components/comment-card/comment-card.component.html
@@ -11,25 +11,13 @@
     comment</button>
 </div>
 
-<div
-  class="modal fade"
-  id="imageModal"
-  tabindex="-1"
-  aria-labelledby="imageModalLabel"
-  aria-hidden="true"
-  (click)="$event.stopPropagation()"
-  style="background-color:  rgb(0, 0, 0);"
->
-  <div class="modal-dialog modal-dialog-centered">
+<div *ngIf="isModalOpen" (click)="closeModal()" (click)="$event.stopPropagation()" class="modal" tabindex="-1" aria-hidden="true" 
+  style="background-color: rgb(0, 0, 0); position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+  <div class="modal-dialog modal-dialog-centered" (click)="$event.stopPropagation()">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="imageModalLabel">Image Preview</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+        <h5 class="modal-title">Image Preview</h5>
+        <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
         <img [src]="selectedImage" class="img-fluid" alt="Preview Image" />
